...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/email_edittext_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/white"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <EditText
        android:id="@+id/password_edittext_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/password"
...
        app:layout_constraintEnd_toEndOf="@+id/email_edittext_login"
        app:layout_constraintStart_toStartOf="@+id/email_edittext_login"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_login"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_login"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_login"
...
