...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/shop"
        app:layout_constraintTop_toBottomOf="@id/bank_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/my_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
